<?xml version="1.0"?>
<project
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>esthesis</groupId>
		<artifactId>esthesis-bom</artifactId>
		<version>1.0.30-SNAPSHOT</version>
	</parent>

	<artifactId>esthesis-core</artifactId>
	<version>3.1.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>io.quarkus.platform</groupId>
				<artifactId>quarkus-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<!-- QUARKUS -->
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-config-yaml</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-arc</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-hibernate-validator</artifactId>
		</dependency>

		<!-- ESTHESIS -->
		<dependency>
			<groupId>esthesis</groupId>
			<artifactId>esthesis-common</artifactId>
			<version>1.0.30-SNAPSHOT</version>
		</dependency>

		<!-- THIRD-PARTY -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<!-- TESTING -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit5</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit5-mockito</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.instancio</groupId>
			<artifactId>instancio-junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-jacoco</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit5-component</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-test-security</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<modules>
		<module>common</module>
		<module>services</module>
		<module>dataflows</module>
		<module>util</module>
	</modules>

	<profiles>
		<profile>
			<activation>
				<property>
					<name>native</name>
				</property>
			</activation>
			<id>native</id>
			<properties>
				<quarkus.package.type>native</quarkus.package.type>
				<skipITs>false</skipITs>
			</properties>
		</profile>
		<profile>
			<id>cicd</id>
			<activation>
				<property>
					<name>cicd</name>
				</property>
			</activation>
			<properties>
				<jacoco.version>0.8.12</jacoco.version>
			</properties>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<artifactId>cyclonedx-maven-plugin</artifactId>
							<configuration>
								<includeBomSerialNumber>true</includeBomSerialNumber>
								<includeCompileScope>true</includeCompileScope>
								<includeLicenseText>false</includeLicenseText>
								<includeProvidedScope>true</includeProvidedScope>
								<includeRuntimeScope>true</includeRuntimeScope>
								<includeSystemScope>true</includeSystemScope>
								<includeTestScope>false</includeTestScope>
								<outputFormat>xml</outputFormat>
								<outputName>bom</outputName>
								<outputReactorProjects>false</outputReactorProjects>
								<projectType>application</projectType>
								<schemaVersion>1.4</schemaVersion>
							</configuration>
							<executions>
								<execution>
									<goals>
										<goal>makeAggregateBom</goal>
									</goals>
									<phase>package</phase>
								</execution>
							</executions>
							<groupId>org.cyclonedx</groupId>
							<inherited>false</inherited>
							<version>2.7.9</version>
						</plugin>
					</plugins>
				</pluginManagement>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<!-- Ensure each module generates coverage -->
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
<!--									<exclClassLoaders>*QuarkusClassLoader</exclClassLoaders>-->
									<destFile>${project.build.directory}/jacoco.exec</destFile>
<!--									<append>true</append>-->
								</configuration>
							</execution>
							<!-- Ensure all JaCoCo reports are merged across modules -->
							<execution>
								<id>merge-results</id>
								<phase>verify</phase>
								<goals>
									<goal>merge</goal>
								</goals>
								<configuration>
									<destFile>${maven.multiModuleProjectDirectory}/target/jacoco.exec</destFile>
									<fileSets>
										<fileSet>
											<directory>${maven.multiModuleProjectDirectory}</directory>
											<includes>
												<include>**/target/jacoco.exec</include>
											</includes>
										</fileSet>
									</fileSets>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>@{argLine}</argLine>
<!--							<systemPropertyVariables>-->
<!--								<quarkus.jacoco.data-file>${maven.multiModuleProjectDirectory}/target/jacoco-quarkus.exec</quarkus.jacoco.data-file>-->
<!--								<quarkus.jacoco.reuse-data-file>true</quarkus.jacoco.reuse-data-file>-->
<!--								<quarkus.jacoco.report-location>${maven.multiModuleProjectDirectory}/target/coverage</quarkus.jacoco.report-location>-->
<!--							</systemPropertyVariables>-->
						</configuration>
					</plugin>
					<plugin>
						<artifactId>cyclonedx-maven-plugin</artifactId>
						<groupId>org.cyclonedx</groupId>
						<inherited>false</inherited>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
